--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#resume">
-                Resume
+                Education
               </a>
             </li>
             <li class="nav-item">
