--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
           <a href="#about">about</a>
         </li>
         <li>
-          <a href="#services">Services</a>
+          <a href="#services">skills</a>
         </li>
         <li>
-          <a href="#resume">resume</a>
+          <a href="#resume">Education</a>
         </li>
         <li>
           <a href="#portfolio">Work</a>
