--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <div class="contents">
               <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hi This is</h5>
               <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Robin Sunita Roy</h2>
-              <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Full-Stack Web Developer and cyber security
-                enthusiast</p>
+              <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Full-Stack Web Developer and Cyber Security
+                Enthusiast</p>
               <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                 <li>
                   <a class="facebook" href="https://fb.com/ro113x" target="_blank"><i class="icon-social-facebook"></i></a>
