--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
               </ul>
             </div>
-            <a href="#" class="btn btn-common" target="_blank"><i class="icon-paper-clip"></i> Download Resume</a>
+            <a href="https://raw.githubusercontent.com/robin113x/Certification/de3a230fffe393521b86277ffaecc28c46acf4eb/Robin_Resume.pdf" class="btn btn-common" target="_blank"><i class="icon-paper-clip"></i> Download Resume</a>
             <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
           </div>
         </div>
