--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
           <div class="col-md-6 col-lg-6 col-sm-12">
             <div class="footer-right-area wow fadeIn">
-              <h2>Contact Address</h2>
+              <h2>Contact Me</h2>
               <div class="footer-right-contact">
                 <div class="single-contact">
                   <div class="contact-icon">
