--- a/index.html
+++ b/index.html
@@ -567,6 +567,7 @@
   <footer class="footer-area section-padding">
     <div class="container">
       <div class="row">
+                    <p>ROBIN ROY</p>
         <div class="col-md-12">
           <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
             <ul class="social-icon">
