--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
       </div>
     </div>
   </section>
+   <script src="https://tryhackme.com/badge/2050915"></script>
+   <img src="https://tryhackme-badges.s3.amazonaws.com/brs113x.png" alt="TryHackMe">
   <!-- About Section End -->
 
   <!-- Services Section Start -->
