--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
       </div>
     </div>
   </section>
-   <script src="https://tryhackme.com/badge/2050915"></script>
-   <img src="https://tryhackme-badges.s3.amazonaws.com/brs113x.png" alt="TryHackMe">
+   
+  
   <!-- About Section End -->
 
   <!-- Services Section Start -->
@@ -517,7 +517,7 @@
 
           <div class="col-md-6 col-lg-6 col-sm-12">
             <div class="footer-right-area wow fadeIn">
-              <h2>Contact Me</h2>
+              <h2>Contact Me</h2> <script src="https://tryhackme.com/badge/2050915"></script>
               <div class="footer-right-contact">
                 <div class="single-contact">
                   <div class="contact-icon">
