--- a/index.html
+++ b/index.html
@@ -164,13 +164,17 @@
   <section id="about" class="section-padding">
     <div class="container">
       <div class="row">
-        
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+          <div class="img-thumb wow fadeInLeft" data-wow-delay="0.3s">
+            <img class="img-fluid" src="https://avatars.githubusercontent.com/u/58402504?v=4" alt="" srcset="">
+          </div>
+        </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
           <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
             <h3>Hello!<span class="blink"> 👋</span></h3>
             <p style="font-size: larger;">
               "My name is <b><span style="color:rgb(236, 20, 207);">Robin Roy</span> </b>, and I currently work as a DevOps engineer at
-              <b><span style="color:rgb(204, 89, 12);">Amdocs R&Ds</span> </b> . 
+              <b><span style="color:rgb(3, 3, 3);">Amdocs R&D<sup>s</sup></span> </b> . 
               I have a great passion for <b><span style="color:rgb(45, 172, 6);">Malware Development</span> </b> & <b><span style="color:rgb(14, 227, 235);">Cyber-Security</span> </b>. Architectural design and smooth integration, 
               along with a natural aptitude for handling challenging issues, are my strong points. My ability to work with 
               cutting-edge technology allows me to lead the development and successful introduction of new projects. 
